--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "mongoose": "^6.4.6"
+    "helmet": "^6.0.0",
+    "mongoose": "^6.4.6",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
